--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,10 @@ jobs:
         run: pip3 install -r requirements.txt
       - name: Generate test data
         run: python3 tools/prepare_tests.py all-tests.yaml > build/tests.txt
+      - name: Extract branch name
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - name: Upload artifacts
         run: | 
           aws --endpoint-url=https://storage.yandexcloud.net \
-          s3 cp --recursive build/ s3://lipsolver-data/latest/
+          s3 cp --recursive build/ s3://lipsolver-data/${{ steps.extract_branch.outputs.branch }}/
