--- a/spec.yaml
+++ b/spec.yaml
@@ -1,4 +1,6 @@
-solvers: []
+solvers:
+  - solver
 problemsFile: build/problems.txt
 queryLimit: 100000
-timeoutSecs: 30
+timeoutSecs: 300
+precision: -3
