--- a/spec.yaml
+++ b/spec.yaml
@@ -110,4 +110,6 @@ solvers:
 problemsFile: build/problems.txt
 queryLimit: 100000
 timeoutSecs: 60
-precision: -3
+precision:
+  exponent: -3
+  kind: None
