--- a/spec.yaml
+++ b/spec.yaml
@@ -88,9 +88,50 @@ solvers:
     extraArgs:
       - --algorithm=Inf-LTIMAO
   - name: direct1d
-    cfgLabel: initial
+    cfgLabel: steps-100::eps=1e-6
+    extraArgs:
+      - --step-counter=100
+      - --epsilon=0.000001
+  - name: direct1d
+    cfgLabel: steps-40::eps=1e-4
     extraArgs:
       - --step-counter=40
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-20::eps=1e-4
+    extraArgs:
+      - --step-counter=20
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-15::eps=1e-4
+    extraArgs:
+      - --step-counter=15
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-12::eps=1e-4
+    extraArgs:
+      - --step-counter=12
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-12::eps=1e-3
+    extraArgs:
+      - --step-counter=12
+      - --epsilon=0.001
+  - name: direct1d
+    cfgLabel: steps-10::eps=1e-4
+    extraArgs:
+      - --step-counter=10
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-8::eps=1e-4
+    extraArgs:
+      - --step-counter=8
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-8::eps=1e-3
+    extraArgs:
+      - --step-counter=8
+      - --epsilon=0.001
 problemsFile: build/problems.txt
 queryLimit: 100000
 timeoutSecs: 60
