--- a/spec.yaml
+++ b/spec.yaml
@@ -88,25 +88,50 @@ solvers:
     extraArgs:
       - --algorithm=Inf-LTIMAO
   - name: direct1d
+    cfgLabel: steps-18::eps=1e-4
+    extraArgs:
+      - --step-counter=18
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-18::eps=1e-6
+    extraArgs:
+      - --step-counter=18
+      - --epsilon=0.000001
+  - name: direct1d
+    cfgLabel: steps-18::eps=1e-9
+    extraArgs:
+      - --step-counter=18
+      - --epsilon=0.000000001
+  - name: direct1d
+    cfgLabel: steps-16::eps=1e-4
+    extraArgs:
+      - --step-counter=16
+      - --epsilon=0.0001
+  - name: direct1d
+    cfgLabel: steps-16::eps=1e-6
+    extraArgs:
+      - --step-counter=16
+      - --epsilon=0.000001
+  - name: direct1d
+    cfgLabel: steps-16::eps=1e-9
+    extraArgs:
+      - --step-counter=16
+      - --epsilon=0.000000001
+  - name: direct1d
     cfgLabel: steps-14::eps=1e-4
     extraArgs:
       - --step-counter=14
       - --epsilon=0.0001
   - name: direct1d
-    cfgLabel: steps-13::eps=1e-4
+    cfgLabel: steps-14::eps=1e-6
     extraArgs:
-      - --step-counter=12
-      - --epsilon=0.0001
+      - --step-counter=14
+      - --epsilon=0.000001
   - name: direct1d
-    cfgLabel: steps-12::eps=1e-4
+    cfgLabel: steps-14::eps=1e-9
     extraArgs:
-      - --step-counter=12
-      - --epsilon=0.0001
-  - name: direct1d
-    cfgLabel: steps-12::eps=1e-3
-    extraArgs:
-      - --step-counter=12
-      - --epsilon=0.001
+      - --step-counter=14
+      - --epsilon=0.000000001
 problemsFile: build/problems.txt
 queryLimit: 100000
 timeoutSecs: 60
