--- a/spec.yaml
+++ b/spec.yaml
@@ -111,6 +111,30 @@ solvers:
       - --step-counter=15
       - --epsilon=0.00001
       - --improvement=0
+  - name: direct1d
+    cfgLabel: steps-14::eps=1e-5::imp=2
+    extraArgs:
+      - --step-counter=15
+      - --epsilon=0.00001
+      - --improvement=2
+  - name: direct1d
+    cfgLabel: steps-14::eps=1e-5::imp=0
+    extraArgs:
+      - --step-counter=15
+      - --epsilon=0.00001
+      - --improvement=0
+  - name: direct1d
+    cfgLabel: steps-14::eps=1e-6::imp=2
+    extraArgs:
+      - --step-counter=15
+      - --epsilon=0.000001
+      - --improvement=2
+  - name: direct1d
+    cfgLabel: steps-14::eps=1e-6::imp=0
+    extraArgs:
+      - --step-counter=15
+      - --epsilon=0.000001
+      - --improvement=0
 problemsFile: build/problems.txt
 queryLimit: 100000
 timeoutSecs: 60
